cleaned up navbar/logo, added css

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -8,44 +8,79 @@
     background-image: url("forest-background.jpg");
     background-size: cover;
     height: 100vh;
-  }
+}
 
-span { 
-display: flex;
-align-items: center
- }
-
- .logo {
+span {
     display: flex;
-    align-items: center;
+    align-items: center
+}
+
+.logo {
+    display: flex;
+    align-items: flex-end;
     font-size: 35px;
     font-family: 'Tsukimi Rounded', sans-serif;
-    color: #4876526a;
- 
-  }
-  
-  .logo-text {
+    color: #48765295;
+}
+
+.logo-text {
     display: flex;
-    align-items: center;
+    align-items: flex-end;
     font-weight: 15;
-  }
-  
-  .logo-text > span {
+}
+
+.logo-text>span {
     position: relative;
-  }
-  
-  .animation-container {
+}
+
+.animation-container {
     position: relative;
     z-index: 1;
-    width: 80px;
-  }
-  
-  .logo-text > span:first-child {
+    width: 70px;
+    height: 200px;
+    margin-bottom: 8px;
+}
+
+.logo-text>span:first-child {
     margin-right: -25px;
     z-index: 2;
-  }
-  
-  .logo-text > span:last-child {
-    margin-left: -26px; 
+}
+
+.logo-text>span:last-child {
+    margin-left: -32px;
     z-index: 2;
-  }
+}
+
+.navbar {
+    display: flex;
+    justify-content: space-around;
+    text-align: center;
+}
+
+.nav-1,
+.nav-2 {
+    display: flex;
+    list-style: none;
+    margin-top: 15vh;
+}
+
+.nav-1 li,
+.nav-2 li {
+    margin-right: 15px;
+}
+
+
+.nav-1 {
+    margin-left: 20vh;
+}
+
+
+.nav-2 {
+    margin-right: 20vh;
+}
+
+
+#nav-font {
+    text-decoration: none;
+    color: inherit;
+}
