changed font on preloader

--- a/client/src/components/preloader.css
+++ b/client/src/components/preloader.css
@@ -3,6 +3,8 @@
     width: 100%;
     background: white;
     color:#48765295;
+    font-size: 35px;
+    font-family: 'Tsukimi Rounded', sans-serif;
     position: fixed;
     bottom: 0;
     left: 0;
