form styling and seed data

--- a/client/src/styles/ImpactModal.css
+++ b/client/src/styles/ImpactModal.css
@@ -24,14 +24,38 @@
     background: white;
     padding: 15px;
     max-width: 90%;
-    min-width:75%;
+    min-width:50%;
     border-radius: 10px;
     box-shadow: 15px 15px 22px -2px rgba(0, 0, 0, 0.435);
     margin-top: 75px;
     max-height: calc(80vh); 
     overflow-y: auto;
     
-    /* display: flex;
+    display: flex;
     justify-content:space-between;
-    flex-wrap: wrap; */
+    flex-wrap: wrap;
+    flex-direction: column;
+    align-items: center;
 }
+
+.modal-content form{
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.modal-content option {
+    text-align: center;
+}
+.modal-content select{
+    display: block;
+    box-sizing: border-box;
+    padding: 0.5rem;
+    margin: 5px;
+    margin-bottom: 20px;
+}
+.modal-content button{
+
+    padding: 0.5rem;
+}
+
