--- a/client/src/styles/ImpactModal.css
+++ b/client/src/styles/ImpactModal.css
@@ -60,5 +60,6 @@
     color: white; /* Sets the text color to white */
     padding: 10px 20px; /* Optional: Adds some padding to the button */
     box-shadow: 2px 3px 20px rgba(0, 0, 0, 0.4);
+    margin-top: 10px;
 }
 
