--- a/client/src/styles/Profile.css
+++ b/client/src/styles/Profile.css
@@ -15,8 +15,8 @@
 .chartDisplay{
     min-width: 50%;
     margin: 20px;
-    max-width: 70%;
-    min-height: 50%;
+    max-width: 60%;
+    max-height: 60%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -24,4 +24,5 @@
     background-color: #f3f3f3;
     border-radius: 10px;
     box-shadow: 5px 5px 10px #0000006d;
+    padding: 30px;
 }
