--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,4 +1,3 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Tsukimi+Rounded:wght@300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@200&display=swap');
 
@@ -13,19 +12,19 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-direction: column; 
-     /* flex-wrap: wrap; */
+    flex-direction: column;
+    /* flex-wrap: wrap; */
 }
 
 .profile-body {
     background-image: url("forest-background.jpg");
-    background-size: cover;
+    background-size: 100%;
     /* height: 100vh; */
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-direction: column; 
-     /* flex-wrap: wrap; */
+    flex-direction: column;
+    /* flex-wrap: wrap; */
 }
 
 span {
@@ -35,10 +34,11 @@ span {
 
 .logo {
     display: flex;
-    align-items: flex-end;
+    align-items: center;
     font-size: 35px;
     font-family: 'Tsukimi Rounded', sans-serif;
     color: #487652b3;
+
 }
 
 .logo-text {
@@ -71,34 +71,27 @@ span {
 
 .navbar {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
+    align-items: flex-end;
     text-align: center;
     font-family: 'Josefin Sans', sans-serif;
-    font-size: x-large
+    font-size: x-large;
+    padding: 0;
+    background-color: #849c8c85;
 }
-
-.nav-1,
-.nav-2 {
-    display: flex;
-    list-style: none;
-    margin-top: 25vh;
-}
-
-.nav-1 li,
-.nav-2 li {
-    margin-right: 35px;
-}
-
 
 .nav-1 {
-    margin-left: 30vh;
+    list-style: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0;
+
 }
 
-
-.nav-2 {
-    margin-right: 30vh;
+.nav-1 li {
+    margin-right: 40px;
 }
-
 
 #nav-font {
     text-decoration: none;
@@ -121,12 +114,3 @@ span {
     background-color: white;
 }
 
-.home-transition-btn {
-    display: flex;
-    justify-content: center;
-}
-
-#chevron {
-    height: 8vh;
-
-}
