--- a/client/src/App.css
+++ b/client/src/App.css
@@ -6,7 +6,7 @@
 }
 
 .home-body {
-    background-image: url("forest-background.jpg");
+    background-image: url("./images/forest-background.jpg");
     background-size: cover;
     height: 100vh;
     display: flex;
@@ -17,9 +17,10 @@
 }
 
 .profile-body {
-    background-image: url("forest-background.jpg");
-    background-size: 100%;
-    /* height: 100vh; */
+    background-color: rgb(35, 78, 35);
+    background-image: url("./images/forest-background.jpg");
+    background-size: cover;
+    min-height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
