--- a/client/src/styles/ImpactModal.css
+++ b/client/src/styles/ImpactModal.css
@@ -14,6 +14,9 @@
 }
 
 .impactModalContent{ 
+    font-family: sans-serif;
+    font-size: medium;
+    margin: 10px;
     position:fixed;
     top: 40%;
     left: 50%;
@@ -36,6 +39,13 @@
     align-items: center;
 }
 
+.impactModalContent h2{
+    font-size: 25px;
+    margin: 20px;
+    padding: 5px;
+    border-bottom: solid 1px rgba(0, 0, 0, 0.503);
+}
+
 .impactModalContent form{
     text-align: center;
     display: flex;
@@ -51,6 +61,7 @@
     padding: 0.5rem;
     margin: 5px;
     margin-bottom: 20px;
+    border: solid 1px rgba(0, 0, 0, 0.501);
 }
 .impactModalContent button{
 
@@ -60,6 +71,18 @@
     color: white; /* Sets the text color to white */
     padding: 10px 20px; /* Optional: Adds some padding to the button */
     box-shadow: 2px 3px 20px rgba(0, 0, 0, 0.4);
-    margin-top: 10px;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 
+.impactModalContent input{
+    background-color: white;
+    border: solid 1px #0000007f;
+}
+
+.actionSelection{
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
