--- a/client/src/styles/Profile.css
+++ b/client/src/styles/Profile.css
@@ -1,7 +1,7 @@
 .impactScoreDisplay{
     min-width: 50%;
-    max-width: 70%;
-    height: 100px;
+    max-width: 90%;
+    /* height: 100px; */
     display: flex;
     align-items: center;
     justify-content: center;
@@ -10,9 +10,26 @@
     border-radius: 10px;
     box-shadow: 5px 5px 10px #0000006d;
     margin: 20px;
+    padding: 10px;
    
 }
+/* .weeklyGoal {
+    color: #fff
+} */
+.impactScoreDisplay h2 {
+    font-size: 20px;
+    font-weight: 500;
+}
 
+.impactScoreDisplay h3 {
+    font-size: 30px;
+    font-weight: 500;
+    color: rgb(35, 78, 35);
+    padding: 10px;
+    /* border: solid 2px rgba(35, 78, 35, 0.4);
+    border-radius: 30px; */
+    text-shadow: 2px 2px 5px rgba(35, 78, 35, 0.481);
+}
 
 .chartDisplay{
     /* min-width: 80%; */
@@ -41,6 +58,7 @@
     justify-content: center;
     flex-wrap: wrap;
     flex-direction: column;
+    align-items: center;
 
 }
 
