--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,9 +2,28 @@
 @tailwind components;
 @tailwind utilities;
 
+
 @layer components {
   .btn-primary {
-    @apply py-2 px-4 bg-lime-900 text-white font-semibold rounded-lg shadow-md hover:bg-lime-700 focus:outline-none focus:ring-2 focus:ring-blue-400 focus:ring-opacity-75;
+    @apply py-2 px-4 bg-lime-700 text-white font-semibold rounded-lg shadow-md hover:bg-green-800 focus:outline-none focus:ring-2 focus:ring-blue-400 focus:ring-opacity-75;
+  }
+  .donate-intro-text{
+    @apply lg:col-start-3 lg:col-end-7 col-start-2 col-end-6 place-self-center text-4xl sm:text-7xl font-bold text-slate-700 mt-3 mr-3
+  }
+  .donate-titles{
+    @apply sm:my-4 text-3xl sm:text-5xl font-bold text-slate-700 leading-snug
+  }
+  .donate-text{
+    @apply my-5 text-base sm:text-xl text-slate-600
+  }
+  .donate-points{
+    @apply lg:col-start-2 lg:col-end-4 mb-3 col-start-2 col-end-6
+  }
+  .donate-points-text{
+    @apply pl-2 text-base sm:text-lg text-slate-600
+  }
+  .donate-button{
+    @apply lg:col-start-4 lg:col-end-5 place-self-start col-start-2 col-end-6
   }
 }
 
