--- a/client/src/styles/Profile.css
+++ b/client/src/styles/Profile.css
@@ -47,6 +47,12 @@
     flex-grow: 1;
 }
 
+.electricityBill{
+    background-color: rgba(35, 78, 35);
+    border-radius: 10px;
+    box-shadow: 15px 15px 22px -2px rgba(0, 0, 0, 0.435);
+}
+
 .graphContainer{
     display: flex;
     justify-content: center;
