--- a/client/src/index.css
+++ b/client/src/index.css
@@ -26,7 +26,9 @@
     @apply lg:col-start-4 lg:col-end-5 place-self-start col-start-2 col-end-6
   }
 }
-
+:root{
+  --green: #7grea877
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
