--- a/client/src/styles/Button.css
+++ b/client/src/styles/Button.css
@@ -1,14 +1,14 @@
 .impactButton  {
     border: none;
     border-radius: 20px; /* Makes the button round */
-    background-color: rgb(35, 78, 35); /* Sets the background color to sage green */
+    background-color: var(--green); /* Sets the background color to sage green */
     color: white; /* Sets the text color to white */
     padding: 10px 20px; /* Optional: Adds some padding to the button */
-    box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.5);
+    box-shadow: 3px 3px 15px rgba(0, 0, 0, 0.3);
     margin: 20px;
   }
 
 .impactButton:hover {
-  box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.8);
+  box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.5);
   transform: scale(1.05);
 }  
