--- a/client/src/styles/ImpactModal.css
+++ b/client/src/styles/ImpactModal.css
@@ -67,7 +67,7 @@
 
     border: none;
     border-radius: 20px; /* Makes the button round */
-    background-color: rgb(35, 78, 35); /* Sets the background color to sage green */
+    background-color: #7ea877; /* Sets the background color to sage green */
     color: white; /* Sets the text color to white */
     padding: 10px 20px; /* Optional: Adds some padding to the button */
     box-shadow: 2px 3px 20px rgba(0, 0, 0, 0.4);
