--- a/client/src/styles/Profile.css
+++ b/client/src/styles/Profile.css
@@ -48,9 +48,18 @@
 }
 
 .electricityBill{
-    background-color: rgba(35, 78, 35);
+    background-color: var(--green);
     border-radius: 10px;
     box-shadow: 15px 15px 22px -2px rgba(0, 0, 0, 0.435);
+}
+
+hr{
+    width: 80px;
+    border: 1px solid #7ea8779f;
+    margin: auto;
+    margin-bottom: 10px;
+
+
 }
 
 .graphContainer{
@@ -65,6 +74,9 @@
     flex-wrap: wrap;
     flex-direction: column;
     align-items: center;
+    /* border-radius: 10px;
+    box-shadow: 15px 15px 22px -2px rgba(0, 0, 0, 0.435); */
+    /* text-align: center; */
 
 }
 
