--- a/client/src/App.css
+++ b/client/src/App.css
@@ -71,12 +71,28 @@ span {
     align-items: center;
 }
 
+.logoText{
+    color: var(--green);
+    z-index: 1;
+    position: relative;
+    scale: 0.8;
+    margin-top: -64px;
+    margin-left: -20px;
+}
 .animation-container {
     position: relative;
-    z-index: 1;
-    width: 70px;
+    scale:1.4;
+    /* z-index: 1; */
+    width: 100px;
     height: 100px;
     margin-bottom: 0px;
+}
+
+.logo-text {
+    display: flex;
+    align-items: flex-end;
+    font-weight: 15;
+    
 }
 
 .logo-text>span:first-child {
@@ -218,13 +234,16 @@ span {
 }
 
 .home-top {
-    width: 100vh;
+    /* width: 100vh; */
     /* height: 40vh; */
     display: flex;
-    align-items: inline;
+    padding: 10px;
+    /* align-items: inline; */
+    flex-wrap: wrap;
+    flex-direction: column;
     justify-content: space-around;
     margin-bottom: 50px;
-    margin-top: 15vh;
+    margin-top: 2vh;
 }
 
 .advice-box {
