--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,7 +5,7 @@
 
 @layer components {
   .btn-primary {
-    @apply py-2 px-4 bg-lime-700 text-white font-semibold rounded-lg shadow-md hover:bg-green-800 focus:outline-none focus:ring-2 focus:ring-blue-400 focus:ring-opacity-75;
+    @apply py-2 px-4 text-white font-semibold rounded-lg shadow-md  focus:outline-none focus:ring-2 focus:ring-blue-400 focus:ring-opacity-75;
   }
   .donate-intro-text{
     @apply lg:col-start-3 lg:col-end-7 col-start-2 col-end-6 place-self-center text-4xl sm:text-7xl font-bold text-slate-700 mt-3 mr-3
@@ -29,6 +29,19 @@
 :root{
   --green: #7ea877
 }
+.btn-primary{
+  background-color: var(--green);
+  box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.3);
+  transform: scale(1.05);
+}
+
+.btn-primary:hover{
+  scale:1.05;
+}
+.donate-button:hover{
+  scale:1.05;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
