--- a/client/src/styles/ImpactModal.css
+++ b/client/src/styles/ImpactModal.css
@@ -43,7 +43,7 @@
     font-size: 25px;
     margin: 20px;
     padding: 5px;
-    border-bottom: solid 1px rgba(0, 0, 0, 0.503);
+    border-bottom: solid 2px #7ea87749;
 }
 
 .impactModalContent form{
